[project]
name = "hybrid-search-qdrant"
version = "0.1.0"
description = "Hybrid Document Search with Qdrant and Sentence Transformers - Workshop by learnwithparam.com"
authors = [{ name = "Param Harrison", email = "param@learnwithparam.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "pymupdf4llm>=0.0.5",
    "python-multipart>=0.0.6",
    "aiohttp>=3.9.0",
    "langchain-text-splitters>=0.0.1",
    "python-docx>=1.0.0",
]
